--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
